Fixed UserCard checkbox issue on smaller devices

--- a/src/shared/Home/UserCard.css
+++ b/src/shared/Home/UserCard.css
@@ -15,7 +15,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 70px;
 }
 
 .iconContainer i {
